--- a/sass/style.scss
+++ b/sass/style.scss
@@ -100,6 +100,7 @@ ul {
 
 /* header */.site-header {
   @include clearfix;
+  $magic-number: 520px; // based on playing around with what looks good.
   background: $base-foreground-colour;
   box-sizing: border-box;
   padding: $base-line-height;
@@ -112,17 +113,21 @@ ul {
     height: $base-line-height * 1.5;
     margin: $base-line-height / -4 $base-line-height / 2 $base-line-height / -4 0 ;
     width: $base-line-height * 1.5;
-    @media only screen and (max-width: 480px) {
+    @media only screen and (max-width: $magic-number) {
       height: $base-line-height * 2.25;
       margin: 0 $base-line-height / 2 0 0;
-      width: $base-line-height * 2.25; } }
+      width: $base-line-height * 2.25; }
+    // Using just "$iphone-se-width" in this media query would still
+    // cause icons to sometimes appear on two lines.
+    @media only screen and (max-width: $iphone-se-width + 10px) {
+      display: none; } }
   /* h1 */ &__title {
     color: $base-background-colour;
     float: left;
     font-size: 150%;
     line-height: $base-line-height;
     margin: 0;
-    @media only screen and (max-width: 480px) {
+    @media only screen and (max-width: $magic-number) {
       float: none; } }
   /* ul */ &__navigation-list {
     float: right;
@@ -130,7 +135,8 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    @media only screen and (max-width: 480px) {
+    @media only screen and (max-width: $magic-number) {
+      display: block;
       margin: $base-line-height / 4 0 0 0;
       float: none; }
     /* li */ &__item {
@@ -138,7 +144,7 @@ ul {
       margin: 0;
       padding: 0 $base-line-height 0 0;
       position: relative;
-      @media only screen and (max-width: 480px) {
+      @media only screen and (max-width: $iphone-se-height) {
         padding: 0 $base-line-height / 2 0 0; }
       &:hover &__sub-menu {
         left: $base-line-height / -2;
